# pom1

./: --help  .gitignore  A1IO_RTC.cpp  A1IO_RTC.h  APPLE1DEV.md  AUDIT_POM1.md  AudioDevice.cpp  AudioDevice.h  BusConflicts.h  CFFA1.cpp  CFFA1.h  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CassetteDeck_ImGui.cpp  CassetteDeck_ImGui.h  CassetteDevice.cpp  CassetteDevice.h  CliDispatcher.cpp  CliDispatcher.h  CodeTank.cpp  CodeTank.h  CpuClock.h  Disassembler6502.h  Drive1541.cpp  Drive1541.h  EmulationController.cpp  EmulationController.h  EmulationSnapshot.h  GT6144.cpp  GT6144.h  GraphicsCard.cpp  GraphicsCard.h  IECBus.h  IECCard.cpp  IECCard.h  JukeBox.cpp  JukeBox.h  KeyboardController.h  Logger.cpp  (+55 more)
bench/: BenchLang.cpp  BenchLang.h  CodeBench.cpp  CodeBench.h  IBenchHost.h  Markdown.cpp  Markdown.h  ProcessUtil.cpp  ProcessUtil.h
build-wasm/: POM1.html  POM1.js  POM1.wasm  cc65_bench.js  pom1_imgui.data  pom1_imgui.html  pom1_imgui.js  pom1_imgui.wasm  shell.html
cassettes/: tapeinfo.txt
cmake/: PomVersion.h.in
dev/: APPLE1DEV.md  Programming_Apple1_ASM.md  Programming_Apple1_C.md  Programming_C_Quickstart.md  Programming_GEN2.md  Programming_GEN2C.md  Programming_TMS9918.md  Programming_TMS9918C.md  README.md  SILICONBUGS.md  TODO6502.md
doc/: AUDIT.md  Apple1_Peripherals_Inventory_FR.md  Apple1_Software_Catalog_FR.md  BASIC_COMPILER.md  CC65_WASM.md  CLI.md  DEVBENCH.md  GEN2_RELEASE.md  GEN2_RELEASE_questions.md  HGR_AI_IMAGE_PROMPTS.md  HGR_SPRITES_X1_X2.md  PERF_VIEILLES_MACHINES_FR.md  Programming_Apple1_ASM.md  Périphériques Apple I _ Inventaire Complet.md  README.md  SKETCHS.md  SWTPC_GT-6144.md  SWTPC_PR-40.md  TELEMETRY_SIDE_CHANNEL.md  TMS9918-SPRITE_BEST_PRACTICES.md  TMS9918-SPRITE_INIT.md  TMS9918_TRANSFER_WINDOWS.md  Émulation TMS9918 _ Problèmes Sprites.md
fpga/: AppleI_P-LAB_TMS9918.sv  AppleI_PLAB.qpf  AppleI_PLAB.qsf  AppleI_PLAB_assignment_defaults.qdf  Mister_DEV.md  README.md  files.qip
hgrpaint/: Cam16.cpp  Cam16.h  HgrConvert.cpp  HgrConvert.h  HgrImageDecode.cpp  HgrPaintEditor.cpp  HgrPaintEditor.h  HgrPaintModel.cpp  HgrPaintModel.h  HgrSpriteBank.cpp  HgrSpriteBank.h  IHgrPaintHost.h
hgrsprite/: HgrSpriteAsmExport.cpp  HgrSpriteBlit.cpp  HgrSpriteBlit.h  HgrSpriteEditor.cpp  HgrSpriteEditor.h
ini_defaults/: imgui_preset_00.ini  imgui_preset_01.ini  imgui_preset_02.ini  imgui_preset_03.ini  imgui_preset_04.ini  imgui_preset_05.ini  imgui_preset_06.ini  imgui_preset_07.ini  imgui_preset_08.ini  imgui_preset_09.ini  imgui_preset_10.ini  imgui_preset_11.ini  imgui_preset_12.ini  preset_01.size  preset_02.size  preset_03.size  preset_08.size  preset_09.size  preset_10.size  preset_11.size  preset_12.size
packaging/: regen_icons.sh
roms/: ACI.rom  applesoft-gen2.rom  applesoft-lite-microsd.rom  codetank.rom  codetank.txt  jukebox.rom  jukebox.rom.bak  logo-gen2.rom
sdcard/: HELLO.TXT  PIANO#060600  SIGNAL#F80801  TEST#060300  TEST#F80801
sketchs/: README.md
src/: A1IO_RTC.cpp  A1IO_RTC.h  AudioDevice.cpp  BasicCompiler.cpp  BasicCompiler.h  BasicCompilerApplesoft.cpp  BasicCompilerApplesoft.h  BasicNativeCompiler.cpp  BasicNativeCompiler.h  BasicTokeniserApplesoft.cpp  BasicTokeniserApplesoft.h  BasicTokeniserInteger.cpp  BasicTokeniserInteger.h  BeamClock.h  BusConflicts.h  CFFA1.cpp  CFFA1.h  CassetteDevice.cpp  CassetteDevice.h  CliDispatcher.cpp  CliDispatcher.h  CodeTank.cpp  CodeTank.h  CpuClock.h  CrtEffectStack.cpp  CrtEffectStack.h  CrtParams.h  D64Image.cpp  D64Image.h  Disassembler6502.cpp  Disassembler6502.h  DisplayDevice.h  Drive1541.cpp  EmulationController.cpp  EmulationController.h  EmulationSnapshot.h  Gen2VideoScanner.cpp  Gen2VideoScanner.h  GraphicsCard.cpp  GraphicsCard.h  (+81 more)
tests/: CMakeLists.txt  aci_tape_loading_test.cpp  aci_tape_saving_test.cpp  applesoft_gen2_smoke_test.cpp  applesoft_tms9918_smoke_test.cpp  basic_compiler_smoke_test.cpp  basic_compiler_tokenize_test.cpp  basic_float_runtime_test.cpp  basic_native_bench_test.cpp  basic_native_codegen_test.cpp  basic_native_run_test.cpp  basic_tokenise_integer_test.cpp  beam_clock_smoke.cpp  bench_basic_inject_smoke_test.cpp  bench_basic_native_lores_smoke_test.cpp  bench_basic_native_lores_tms_smoke_test.cpp  bench_basic_native_smoke_test.cpp  bench_basic_tokenize_integer_smoke_test.cpp  bench_basic_tokenize_smoke_test.cpp  bench_logo_inject_smoke_test.cpp  chess_engine_perft_smoke_test.cpp  codetank_game4_smoke_test.cpp  codetank_smoke_test.cpp  codetank_tms9918_dependency_test.cpp  cpu_breakpoint_smoke_test.cpp  cpu_harte_test.cpp  cpu_illegal_cycles_test.cpp  cpu_interrupt_test.cpp  cpu_pc_length_test.cpp  d64_parse_smoke_test.cpp  gen2_beam_race_smoke_test.cpp  gen2_beam_scanline_smoke_test.cpp  gen2_composite_smoke_test.cpp  gen2_floatingbus_smoke_test.cpp  gen2_frame_latch_smoke_test.cpp  gen2_horizontal_split_smoke_test.cpp  gen2_softswitch_msb_smoke_test.cpp  gt6144_smoke_test.cpp  hex_dump_multi_zone_test.cpp  hgr_convert_smoke_test.cpp  (+35 more)
tests/cpu/: README.md
tests/gfx/: README.md
tmspaint/: ITmsPaintHost.h  TmsConvert.cpp  TmsConvert.h  TmsImageDecode.cpp  TmsPaintEditor.cpp  TmsPaintEditor.h  TmsPaintModel.cpp  TmsPaintModel.h
tmssprite/: TmsSpriteAsmExport.h  TmsSpriteEditor.cpp  TmsSpriteEditor.h  TmsSpriteModel.h
tools/: annotate_arduboy_grid.py  apf_minify.py  basicc.cpp  basicc_native.sh  build_c64font_tms.py  build_cc65_bundle.sh  build_cc65_chess_pieces.py  build_cc65_wasm.sh  build_chess_hgr_masks.py  build_chess_sprites.py  build_codetank_logo_rom.py  build_codetank_rom.py  build_games2_rom.py  build_hgr_font_subset.py  build_hgr_sprites.py  build_preshift_sprites.py  build_rogue_hgr_assets.py  build_shared_font.py  build_sid_notes.py  build_sid_song_bank.py  cc65_bench.js  cc65_wasm.js  check_lib_equates.py  check_version_sync.sh  check_wozmon_shims.py  chrome_dino_sheet_to_tms.py  design_logo_sprites.py  emit_bbfont.py  emit_beep_sfx.py  emit_gen2_txt.py  emit_sid_song.py  extract_arduboy_topleft.py  extract_hexany_boss_sprite.py  extract_quale_8x8_tiles.py  extract_scroll_expressions.py  extract_scroll_font.py  (+53 more)
(+1942 files in other folders)
